# Falcor-playground

./: CMakeLists.txt  README.md
5.2/: .gitignore
Data/: .gitignore  ReSTIR.py  ReSTIRDI.py  ReSTIRGI.py  ReSTIRGI_RT.py  ReSTIRTAA.py  RealTimePathTrace.py  TinyPathTracer.py  Wireframe.py  rtxditest.py
GBufferRasterDebugPass/: CMakeLists.txt  GBufferRasterDebugPass.cpp  GBufferRasterDebugPass.h
HybridRaytracing/: CMakeLists.txt  HybridPathtrace.cs.slang  HybridRaytracing.cpp  HybridRaytracing.h  LoadShadingData.slang  TraceRay.slang
ReSTIR/: CMakeLists.txt  RaytraceUtils.slang  ReSTIR.cpp  ReSTIR.h  ReSTIR.rt.slang  Reservoir.slang  SpatialReuse.cs.slang  SpatioTemporalReuse.cs.slang  TemporalWRSTracer.rt.slang  WRS.cs.slang  WRSTracer.cs.slang  WRSTracer.rt.slang
ReSTIRDIPass/: CMakeLists.txt  FinalShading.cs.slang  LoadShadingData.slang  Params.slang  PrepareReservoir.cs.slang  RaytracingUtils.slang  ReSTIRDIPass.cpp  ReSTIRDIPass.h  ReflectTypes.cs.slang  Reservoir.slang  StaticParams.slang
ReSTIRGIPass/: CMakeLists.txt  EvaluateSample.cs.slang  FinalShading.cs.slang  GIReservoir.slang  InitialSampling.cs.slang  LoadShadingData.slang  Params.slang  PathTracer.cs.slang  PrepareReservoir.cs.slang  RaytracingUtils.slang  ReSTIRGIPass.cpp  ReSTIRGIPass.h  ReflectTypes.cs.slang  SpatialResampling.cs.slang  StaticParams.slang  TemporalResampling.cs.slang
TinyPathTracer/: CMakeLists.txt  TinyPathTracer.rt.slang
VisibilityRenderPass/: CMakeLists.txt  Combine.cs.slang  LoadShadingData.slang  ReSTIRShadow.cs.slang  Shading.cs.slang  VisibilityRenderPass.cpp  (+1 more)
(+29 files in other folders)
